--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rgent"
 version = "0.1.0"
 edition = "2021"
 authors = ["Pawan Dubey <git@pawandubey.com>"]
+description = "A speedy static site generator."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
