Add initial support for `rgent new`
This scaffolds out a new site by creating a config in the given folder (which is created as required).
It does not add the directory structure or install themes yet. Maybe it never will. I will only use
that once, and probably don't want to maintain the added complexity from it. Plus, it makes packaging
the binary easier. The tradeoff is in the ease of starting a new project, and delivering themes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ assert_fs = "1.0.10"
 clap = { version = "4.0.32", features = ["derive"] }
 exitcode = "1.1.2"
 indoc = "1.0.8"
+predicates = "2.1.4"
 serde = { version = "1.0.151", features = ["derive"] }
 toml = "0.5.10"
