--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ assert_fs = "1.0.10"
 clap = { version = "4.0.32", features = ["derive"] }
 exitcode = "1.1.2"
 indoc = "1.0.8"
+pathdiff = "0.2.1"
 predicates = "2.1.4"
+pulldown-cmark = "0.9.2"
 serde = { version = "1.0.151", features = ["derive"] }
 toml = "0.5.10"
+walkdir = "2.3.2"
